- Booking last tab creation. - Modified small driver control - Nodified booking view model for other data. - Added new data objects for Employee Agency 	modified:   KarveDapper/KarveDapper.csproj 	deleted:    build.py 	modified:   documentation/KarveCarModels.simp 	modified:   src/Controls/KarveControls/DataArea/DataArea.cs 	modified:   src/Controls/KarveControls/DataField/DataField.cs 	deleted:    src/Controls/KarveControls/DriverSmallControl/DriverSmallControl.xaml 	deleted:    src/Controls/KarveControls/DriverSmallControl/DriverSmallControl.xaml.cs 	modified:   src/Controls/KarveControls/DriverUserControl/DriverUserControl.xaml 	modified:   src/Controls/KarveControls/DualFieldSearchBox/DualFieldSearchBox.cs 	modified:   src/Controls/KarveControls/HeaderedWindow/HeaderedWindow.xaml 	modified:   src/Controls/KarveControls/KarveCar.Controls.csproj 	modified:   src/Controls/KarveControls/KarveTabItemExt.cs 	modified:   src/Controls/KarveControls/TestUIObjects/TestMainWindow.xaml 	modified:   src/Controls/KarveControls/TestUIObjects/TestingViewsModels/TestMainWindowViewModel.cs 	modified:   src/Controls/KarveControls/Themes/Generic.xaml 	modified:   src/Controls/KarveControls/ViewModels/HeaderedLineViewModelBase.cs 	modified:   src/KarveCar.csproj 	modified:   src/KarveCommon/Generic/KarveControlViewModel.cs 	modified:   src/KarveCommon/KarveCar.Common.csproj 	modified:   src/KarveCommon/Services/IEventManager.cs 	modified:   src/KarveLocale/Properties/Resources.Designer.cs 	modified:   src/KarveLocale/Properties/Resources.de-DE.resx 	modified:   src/KarveLocale/Properties/Resources.en-GB.resx 	modified:   src/KarveLocale/Properties/Resources.en-US.resx 	modified:   src/KarveLocale/Properties/Resources.es-ES.resx 	modified:   src/KarveLocale/Properties/Resources.it-IT.resx 	modified:   src/KarveLocale/Properties/Resources.resx 	modified:   src/Modules/BookingModule/BookingModule.csproj 	modified:   src/Modules/BookingModule/ViewModels/BookingControlViewModel.cs 	modif

--- a/src/Controls/KarveControls/HeaderedWindow/HeaderedWindow.xaml
+++ b/src/Controls/KarveControls/HeaderedWindow/HeaderedWindow.xaml
@@ -25,9 +25,9 @@
                 </Grid.RowDefinitions>
                 <ContentControl Grid.Row="0" prism:RegionManager.RegionName="{x:Static karvecm:RegionNames.HeaderRegion}">
                 </ContentControl>
-                <ContentControl Grid.Row="1" prism:RegionManager.RegionName="{x:Static karvecm:RegionNames.LineRegion}">
+                <ContentControl Grid.Row="1" prism:RegionManager.RegionName="{x:Static karvecm:RegionNames.LineRegion}" Visibility="{Binding LineVisible, Converter={StaticResource BooleanToVisibility}}">
                 </ContentControl>
-                <ContentControl Grid.Row="2" prism:RegionManager.RegionName="{x:Static karvecm:RegionNames.FooterRegion}">
+                <ContentControl Grid.Row="2" prism:RegionManager.RegionName="{x:Static karvecm:RegionNames.FooterRegion}" Visibility="{Binding FooterVisible, Converter={StaticResource BooleanToVisibility}}">
                 </ContentControl>
             </Grid>
 
