--- a/src/Controls/KarveControls/DriverUserControl/DriverUserControl.xaml
+++ b/src/Controls/KarveControls/DriverUserControl/DriverUserControl.xaml
@@ -22,6 +22,7 @@
         </Grid.RowDefinitions>
         <karveControls:DualFieldSearchBox DataFieldFirst="CONDUCTOR_CON1"
                                                       Grid.Row="0"
+                                                     x:Name="Driver"
                                                       AssistTableName="DRIVER_ASSIST_2"
                                                       AssistProperties="Code,Name"
                                                       LabelText="Conductor"
@@ -34,18 +35,37 @@
                                                       ItemChangedCommand="{Binding ItemChangedCommand, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                                                       SourceView="{Binding DriverDto2, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                                                       DataSource="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-        <karveControls:DataField LabelText="Nombre" TextContent="{Binding DataObject.NOMBRE_RES, ValidatesOnDataErrors=True, ValidatesOnExceptions=True}" TextContentWidth="250" Grid.Row="1" Margin="0,0,0,2"/>
+
+        <karveControls:DataField LabelText="{Binding lnombre, Source={StaticResource ResourceLanguage}}"
+                                 Height="30"
+                                 DataObject="{Binding DataObject, Mode=TwoWay}"
+                                 DataSourcePath="NOMBRE_RES"
+                                 ItemChangedCommand="{Binding ItemChangeCommand}"
+                                 Watermark="{Binding lnombre, Source={StaticResource ResourceLanguage}}"
+                                 TextContent="{Binding DataObject.NOMBRE_RES, ValidatesOnDataErrors=True, 
+                                                ValidatesOnExceptions=True}" 
+                                 TextContentWidth="250" Grid.Row="1" Margin="0,0,0,2"/>
         <Grid Grid.Row="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"></ColumnDefinition>
                 <ColumnDefinition></ColumnDefinition>
             </Grid.ColumnDefinitions>
-            <karveControls:DataField Grid.Column="0" LabelText="Nif" Height="30" LabelTextWidth="86" TextContent="{Binding DataObject.VALUE.NOMBRE_RES, ValidatesOnDataErrors=True, ValidatesOnExceptions=True}" TextContentWidth="50" Margin="1,3,0,3"></karveControls:DataField>
+            <karveControls:DataField Grid.Column="0" LabelText="{Binding lnif, Source={StaticResource ResourceLanguage}}" 
+                                     Height="30"
+                                     Watermark="{Binding lnif, Source={StaticResource ResourceLanguage}}"
+                                     LabelTextWidth="86"
+                                     DataSourcePath="DNICOND_RES2"
+                                     DataObject="{Binding DataObject}"
+                                     ItemChangedCommand="{Binding ItemChangedCommand}"
+                                     TextContent="{Binding DataObject.DNICOND_RES2, ValidatesOnDataErrors=True, ValidatesOnExceptions=True}" 
+                                     TextContentWidth="50" Margin="1,3,0,3">
+            </karveControls:DataField>
             <karveControls:DualFieldSearchBox DataFieldFirst="PAISNIFCOND_RES2"
                                                       Grid.Column="1"
-                                                      AssistTableName="COUNTRY_ASSIST"
+                                                      x:Name="CountryNif"
+                                                      AssistTableName="COUNTRY2_ASSIST"
                                                       AssistProperties="Code,Name"
-                                                      LabelText="Pais NIF"
+                                                      LabelText="{Binding lcountrynif, Source={StaticResource ResourceLanguage}}"
                                                       LabelTextWidth="50"   
                                                       Margin="0,5,0,0"
                                                       IsReadOnlySecond="True"
@@ -53,10 +73,31 @@
                                                       TextContentSecondWidth="80"
                                                       MagnifierCommand="{Binding AssistCommand, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                                                       ItemChangedCommand="{Binding ItemChangedCommand, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
-                                                      SourceView="{Binding CountryDto, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+                                                      SourceView="{Binding Country2Dto, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                                                       DataSource="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
         </Grid>
-        <karveControls:DirectionInfo Grid.Row="3"></karveControls:DirectionInfo>
+
+        <karveControls:DirectionInfo Grid.Row="3"
+                                             IsSecondEnabled="Collapsed"
+                                             DataObject="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                                                  Direction="DIRCOND_RES2"
+                                                                  Direction2="DIRCOND_RES2"
+                                                                  City="POCOND_RES2"
+                                                                  Country="PAISCOND_RES2"
+                                                                  Province="PROVCOND_RES2"
+                                                                  CityAssistName="DRIVER_CITY"
+                                                                  CountryAssistName="DRIVER_COUNTRY"
+                                                                  ProvinceAssistName="DRIVER_PROV"
+                                                                  Phone="TELCOND_RES2"
+                                                                  Fax="{Binding ElementName=Driver, Path=SelectedObject.FAX}"
+                                                                  Email="{Binding ElementName=Driver, Path=SelectedObject.EMAIL}"
+                                                                  Web="{Binding ElementName=Driver, Path=SelectedObject.WEB}"
+                                                                  MagnifierCommand="{Binding AssistCommand, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+                                                                  MinWidth="400"
+                                                                  ProvinceSourceView="{Binding ProvinceDto3, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+                                                                  CountrySourceView="{Binding CountryDto3, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+                                                                  CitySourceView="{Binding CityDto3, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                                                  ItemChangedCommand="{Binding ItemChangedCommand}"></karveControls:DirectionInfo>
         <Grid Grid.Row="4">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
@@ -71,19 +112,37 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <Label Content="Fecha caducidad NIF" Grid.Row="0" Width="125" HorizontalAlignment="Left" />
-            <DatePicker HorizontalAlignment="Left" SelectedDate="{Binding Path=DataObject.FCADUNIFCOND_RES2, Mode=TwoWay, ValidatesOnDataErrors=True, ValidatesOnNotifyDataErrors=True, ValidatesOnExceptions=True}" Grid.Column="1" Grid.Row="0" x:Name="fCADUNIFCOND_RES2" Width="119" />
+            <Label Content="Fecha caducidad NIF" Grid.Row="0"  HorizontalAlignment="Left" />
+            <DatePicker HorizontalAlignment="Left" SelectedDate="{Binding Path=DataObject.FCADUNIFCOND_RES2, Mode=TwoWay, ValidatesOnDataErrors=True, ValidatesOnNotifyDataErrors=True, ValidatesOnExceptions=True}" Grid.Row="0" x:Name="fCADUNIFCOND_RES2" Width="284" Margin="133,1,0,29" Grid.RowSpan="2" Grid.ColumnSpan="2" />
             <Label Content="Lugar de Nascimiento" Grid.Row="1" Width="125" HorizontalAlignment="Left" />
             <Grid Grid.Column="1" Grid.Row="1" Margin="0,0,-4,0">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="71"/>
+                    <ColumnDefinition Width="50"/>
                     <ColumnDefinition Width="100"/>
                     <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
+                <Syncfusion:SfTextBoxExt 
+                    Text="{Binding Path=DataObject.LUNACI_RES2, Mode=TwoWay, 
+                    ValidatesOnDataErrors=True, ValidatesOnNotifyDataErrors=True, 
+                    ValidatesOnExceptions=True}"
+                    Watermark="{Binding lpoblacion, Source={StaticResource ResourceLanguage}}"
+                    karveControls:ControlExt.ItemChangedCommand="{Binding ItemChangedCommand, Mode=TwoWay}"
+                    karveControls:ControlExt.DataSourcePath="LUNACI_RES2"
+                    karveControls:ControlExt.DataSource="{Binding DataObject}"
+                    Grid.Column="0" Height="30" x:Name="lUNACI_RES2" Margin="-160,0,2,0" Grid.ColumnSpan="2" 
+                    />
 
-                <TextBox Text="{Binding Path=DataObject.LUNACI_RES2, Mode=TwoWay, ValidatesOnDataErrors=True, ValidatesOnNotifyDataErrors=True, ValidatesOnExceptions=True}" Grid.Column="0" Width="120" Height="30" x:Name="lUNACI_RES2" />
-                <Label Content="Fecha Nascimiento" Grid.Column="1" Grid.ColumnSpan="2" Margin="1,0,95,0"  />
-                <DatePicker SelectedDate="{Binding Path=DataObject.FENACI_RES2, Mode=TwoWay, ValidatesOnDataErrors=True, ValidatesOnNotifyDataErrors=True, ValidatesOnExceptions=True}" SelectedDateFormat="Short" Grid.Column="2" Height="30" x:Name="fENACI_RES2" Margin="18,0,-26,0" />
+                <Label Content="{Binding lbirthday, Source={StaticResource ResourceLanguage}}" 
+                       Grid.Column="2" Margin="1,0,88,0" Grid.ColumnSpan="2"  />
+                <DatePicker 
+                    SelectedDate="{Binding Path=DataObject.FENACI_RES2, Mode=TwoWay, ValidatesOnDataErrors=True, ValidatesOnNotifyDataErrors=True, ValidatesOnExceptions=True}" 
+                                                       karveControls:ControlExt.ItemChangedCommand="{Binding ItemChangedCommand}"
+                                                       karveControls:ControlExt.DataSourcePath="FENACI_RES2"
+                                                       karveControls:ControlExt.DataSource="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                    SelectedDateFormat="Short" Grid.Column="3" 
+                    Height="30" x:Name="fENACI_RES2" Margin="18,0,-51,0" />
+
             </Grid>
             <Label Content="Permiso" Grid.Row="2" Margin="3,0" />
             <Grid Grid.Column="1" Grid.Row="2">
@@ -93,9 +152,17 @@
                     <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
 
-                <TextBox Text="{Binding Path=DataObject.PERMISO_RES2, Mode=TwoWay, ValidatesOnDataErrors=True, ValidatesOnNotifyDataErrors=True, ValidatesOnExceptions=True}" Grid.Column="0" Width="120" Height="30" x:Name="pERMISO_RES2" />
+                <Syncfusion:SfTextBoxExt 
+                       karveControls:ControlExt.ItemChangedCommand="{Binding ItemChangedCommand}"
+                       karveControls:ControlExt.DataSourcePath="PERMISO_RES2"
+                       karveControls:ControlExt.DataSource="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                    Text="{Binding Path=DataObject.PERMISO_RES2, Mode=TwoWay, ValidatesOnDataErrors=True, ValidatesOnNotifyDataErrors=True, ValidatesOnExceptions=True}" Grid.Column="0" Height="30" x:Name="pERMISO_RES2" Margin="-160,1,8,0" />
                 <Label Content="Clase" Grid.Column="1" Width="100" />
-                <TextBox Text="{Binding Path=DataObject.CLASE_RES2, Mode=TwoWay, ValidatesOnDataErrors=True, ValidatesOnNotifyDataErrors=True, ValidatesOnExceptions=True}" Grid.Column="2" Height="30" x:Name="cLASE_RES2" Margin="31,1,-167,0" />
+                <Syncfusion:SfTextBoxExt
+                       karveControls:ControlExt.ItemChangedCommand="{Binding ItemChangedCommand}"
+                       karveControls:ControlExt.DataSourcePath="CLASE_RES2"
+                       karveControls:ControlExt.DataSource="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                       Text="{Binding Path=DataObject.CLASE_RES2, Mode=TwoWay, ValidatesOnDataErrors=True, ValidatesOnNotifyDataErrors=True, ValidatesOnExceptions=True}" Grid.Column="2" Height="30" x:Name="cLASE_RES2" Margin="2,1,-290,0" />
             </Grid>
             <Label Content="Expedido" Grid.Row="3" Margin="3,0" />
             <Grid Grid.Column="1" Grid.Row="3">
@@ -105,30 +172,45 @@
                     <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
 
-                <DatePicker SelectedDate="{Binding Path=DataObject.FEEXPE_RES2, Mode=TwoWay, ValidatesOnDataErrors=True, ValidatesOnNotifyDataErrors=True, ValidatesOnExceptions=True}" Grid.Column="0" Width="120" Height="30" x:Name="fEEXPE_RES2" />
+                <DatePicker SelectedDate="{Binding Path=DataObject.FEEXPE_RES2, Mode=TwoWay, ValidatesOnDataErrors=True, ValidatesOnNotifyDataErrors=True, ValidatesOnExceptions=True}" Grid.Column="0" Height="30" x:Name="fEEXPE_RES2" Margin="-160,-1,9,1" />
                 <Label Content="Lugar Expedition" Grid.Column="1" Width="100" />
-                <TextBox Text="{Binding Path=DataObject.LUEXPE_RES2, Mode=TwoWay, ValidatesOnDataErrors=True, ValidatesOnNotifyDataErrors=True, ValidatesOnExceptions=True}" Grid.Column="2" Width="120" Height="30" x:Name="lUEXPE_RES2" Margin="31,0,-29,0" />
+                <Syncfusion:SfTextBoxExt 
+                    karveControls:ControlExt.ItemChangedCommand="{Binding ItemChangedCommand}"
+                    karveControls:ControlExt.DataSourcePath="CLASE_RES2"
+                    karveControls:ControlExt.DataSource="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"   
+                    Text="{Binding Path=DataObject.LUEXPE_RES2, Mode=TwoWay, ValidatesOnDataErrors=True, ValidatesOnNotifyDataErrors=True, ValidatesOnExceptions=True}" Grid.Column="2" Height="30" x:Name="lUEXPE_RES2" Margin="2,0,-289,0" HorizontalAlignment="Left" Width="289" />
             </Grid>
             <Grid Grid.Row="4" Grid.Column="0">
                 <GroupBox Header="{Binding TarjetaDeCredito, Source={StaticResource ResourceLanguage}}">
                     <karveControls:CreditCardControlExt x:Name="CreditCardDriver1"  VisibilitySecurity="{x:Static Visibility.Collapsed}"
-                                                        VisibilityToken="{x:Static Visibility.Collapsed}" CardNumber="{Binding DataObject.TARNUM_RES2}"
-                                                        ExpiryYear="{Binding ExpireCardYear}" ExpiryMonth="{Binding ExpiryMonth}" CardHolder="{Binding DataObject.NOMBRE_RES1}">
+                                                        DataObject="{Binding DataObject, Mode=TwoWay}"
+                                                        VisibilityToken="{x:Static Visibility.Collapsed}" 
+                                                        AssistCommand="{Binding AssistCommand}"
+                                                        ItemChangedCommand="{Binding ItemChangedCommand}"
+                                                        CreditCardView="{Binding CreditCardView}"
+                                                        CardNumber="{Binding DataObject.TARNUM_RES2}"
+                                                        ExpiryYear="{Binding ExpireCardYear}" 
+                                                        ExpiryMonth="{Binding ExpiryMonth}" 
+                                                        CardHolder="{Binding DataObject.NOMBRE_RES1}">
                     </karveControls:CreditCardControlExt>
                 </GroupBox>
             </Grid>
             <Grid Grid.Row="4" Grid.Column="1" VerticalAlignment="Top">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="42"></ColumnDefinition>
-                    <ColumnDefinition Width="51"/>
-                    <ColumnDefinition Width="Auto"></ColumnDefinition>
-                    <ColumnDefinition Width="Auto"></ColumnDefinition>
+                    <ColumnDefinition Width="59"/>
+                    <ColumnDefinition Width="Auto" MinWidth="193"></ColumnDefinition>
+                    <ColumnDefinition Width="Auto" MinWidth="108"></ColumnDefinition>
                 </Grid.ColumnDefinitions>
-                <Label Grid.Column="0" Content="{Binding lhoteldirection, Source={StaticResource ResourceLanguage}}" Height="30" Grid.ColumnSpan="2" />
-                <TextBox Grid.Column="2" Width="200" Height="30" Text="{Binding Path=DataObject.DIRHOTELCOND_RES2, Mode=TwoWay, ValidatesOnDataErrors=True, ValidatesOnNotifyDataErrors=True, ValidatesOnExceptions=True}" x:Name="dIRHOTELCOND_RES2" Margin="1,0,0,0" />
+                <Label Grid.Column="0" Content="{Binding lhoteldirection, Source={StaticResource ResourceLanguage}}" Grid.ColumnSpan="3" Margin="0,0,192,0" />
+                <Syncfusion:SfTextBoxExt Grid.Column="2"
+                                         Watermark="{Binding lstreetwm, Source={StaticResource ResourceLanguage}}"
+                                         Text="{Binding Path=DataObject.DIRHOTELCOND_RES2, Mode=TwoWay, 
+                    ValidatesOnDataErrors=True, ValidatesOnNotifyDataErrors=True, ValidatesOnExceptions=True}" 
+                         x:Name="dIRHOTELCOND_RES2" />
                 <Syncfusion:ButtonAdv Grid.Column="3" Label="{Binding lfindmap, Source={StaticResource ResourceLanguage}}" 
                                       SmallIcon="/KarveControls;component/Images/maps.png" 
-                                      Command="{Binding ShowCommandMap, Mode=OneWay}">
+                                      Command="{Binding ShowCommandMap, Mode=OneWay}"  CommandParameter="{Binding }" Margin="7,0,0,0">
 
                 </Syncfusion:ButtonAdv>
             </Grid>
